--- a/mail/src/main/resources/application.yaml
+++ b/mail/src/main/resources/application.yaml
@@ -9,8 +9,8 @@ spring:
   mail:
     host: smtp.126.com
     post: 25
-    username: lzycug
-    password: LBQJOVBCBXPASRUW
+    username: mail
+    password: LBQJOVBCBXXXXXX
     default-encoding: UTF-8
     properties:
       mail:
@@ -19,7 +19,7 @@ spring:
           socketFactoryClass: javax.net.ssl.SSLSocketFactory
 
   datasource:
-    url: jdbc:mysql://47.98.175.65:3306/information_collec?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://47.98.xxx.xx:3306/vhr?useUnicode=true&characterEncoding=utf8
     driverClassName: com.mysql.jdbc.Driver
-    username: lzy
+    username: root
     password: 123456
